<resources>
    <string name="app_name">OwlQuiz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="timer_60">60 s</string>
    <string name="timer_30">30 s</string>
    <string name="timer_20">20 s</string>
    <string name="btn_start">start</string>
    <string name="btn_stop">stop</string>
    <string name="btn_pause">pause</string>
    <string name="tv_header">Timer</string>

    <string name="units_seconds">s</string>
    <string name="category_sound">Sound options</string>
    <string name="sound_off">Sound is off</string>
    <string name="sound_on">Sound is on. Any problems? Check notification volume</string>
    <string name="timer_sound_notification">Timer sound</string>
    <string name="nav_timer">Timer</string>

    <string name="preference_file_key" translatable="false">eu.vmpay.owlquiz.sp</string>
    <string name="player_id_key" translatable="false">player_id</string>
    <string name="timer_sound_notification_key" translatable="false">timer_sound_notification</string>

    <string name="nav_group_search">Search</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_players">Players</string>
    <string name="nav_tournaments">Tournaments</string>
    <string name="account">Account</string>
    <string name="nav_training">Training</string>
    <string name="nav_local_competition">Local competition</string>
    <string name="nav_group_application">Application</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="tv_empty_name">Hello, stranger!</string>
    <string name="tv_empty_team">Why don\'t you review Account?</string>
    <string name="title_activity_account">Account</string>
    <string name="query_hint">Search</string>
    <string name="player_id_hint">Player ID</string>
    <string name="patronymic_hint">Patronymic</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="no_players_found">No players found</string>
    <string name="network_error">Network error occurred</string>
    <string name="rating">Rating:</string>
    <string name="rating_position">Rating position:</string>
    <string name="rating_date">Date:</string>
    <string name="server_internal_error">Server internal error</string>
    <string name="not_available">N/A</string>
    <string name="team">Team</string>
    <string name="action_pin">Pin</string>
    <string name="bookmarked_success">The player bookmarked</string>
    <string name="bookmark_empty">Bookmark is empty</string>
    <string name="no_team_found">No team found</string>
</resources>
